--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mocha": "^5.2.0",
     "moment": "^2.22.2",
-    "mocha": "^5.2.0"
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
